--- a/public/css/estilo.css
+++ b/public/css/estilo.css
@@ -6,6 +6,7 @@ body {
   padding: 0;
   font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   overflow: hidden;
+  background-color: black
 }
 
 :root {
@@ -60,96 +61,8 @@ body {
   margin: 0;
 }
 
+
 /* BANNER */
-.alinhaConjunto {
-  background-image: url(../assets/imgs/biddragon.jpg);
-  background-size: contain;
-  background-repeat: none;
-
-}
-
-.conjunto {
-  color: #e1e5ee;
-  font-family: "Convergence", sans-serif;
-  font-size: 1.2rem;
-  height: 100vh;
-  display: flex;
-  width: 50vw;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-h2 {
-  margin-bottom: 15px;
-  color: #47383F;
-}
-
-.form {
-  position: relative;
-  width: 20rem;
-  height: 3rem;
-  margin-bottom: 20px;
-}
-
-.form__input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 2px solid #e1e5ee;
-  border-radius: 0.5rem;
-  font-family: inherit;
-  font-size: inherit;
-  color: #47383F;
-  outline: none;
-  padding: 1.25rem;
-  background: none;
-  /* Change border when input focus*/
-  box-sizing: border-box;
-
-}
-
-.form__input:hover {
-  border-color: #47383F;
-}
-
-.form__input:focus {
-  border-color: #FF7022;
-}
-
-.form__span {
-  position: absolute;
-  left: 1rem;
-  top: 0.8rem;
-  padding: 0 0.5rem;
-  color: #47383F;
-  cursor: text;
-  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
-  background-color: #e1e5ee;
-  border-radius: 0.5rem;
-}
-
-/* 
-1. Quando a input está no modo FOCUS
-reduz o tamanho da label e move para cima
-
-2. mantém a label parado quando o conteudo esta na input
-*/
-.form__input:focus~.form__span,
-.form__input:not(:placeholder-shown).form__input:not(:focus)~.form__span {
-  top: -0.50rem;
-  font-size: 0.8rem;
-  left: 0.8rem;
-}
-
-.button {
-  font-family: "Convergence", sans-serif;
-  padding: 10px;/* Distancia da borda do botao para o que esta escrito nele */
-  border-radius: 0.5rem;/* Arredonda a borda em 15px */
-  font-weight: 700;/* Torna a grossura da fonte em bold 700 */
-}
 
 
 /*LOGIN */
@@ -353,11 +266,6 @@ input {
 
 
 
-
-
-
-
-
 /* ALERTA */
 #alerta {
   position: absolute;
@@ -430,21 +338,21 @@ input {
 
 
 /*-------RODAPÉ-------*/
-footer {
+/* footer {
   background-color: white;
   color: black;
   width: 100%;
-  /* height: 350px; */
+  /* height: 350px; 
   padding: 30px;
   display: flex;
 }
 
 footer p{
   width: 375px; 
-}
+} */
 
-/* Detalhes da parte esquerda do Footer */
-.column1 {
+/* -------Detalhes da parte esquerda do Footer */
+/* .column1 {
   margin-left: 10px;
   width: 440px;
   border-right: solid;
@@ -461,10 +369,10 @@ footer p{
   margin-right: 3px;
   height: 50px;
   width: 50px;
-}
+} */
 
-/* Detalhes da parte central do Footer */
-.column2{
+/* -------Detalhes da parte central do Footer */
+/* .column2{
   width: 302px;
   border-right: solid;
   margin-left: 20px;
@@ -481,10 +389,10 @@ footer p{
   text-decoration:none;
   color: black;
   margin-bottom: 5px;
-}
+} */
 
-/* Detalhes da parte direita do Footer */
-.column3{
+/* -------Detalhes da parte direita do Footer */
+/* .column3{
   margin-left: 10px;
   width: 440px;
   display: flex;
@@ -507,15 +415,15 @@ footer p{
   color: black;
 }
 
-/* Mapa do Endereço */
+/* -------Mapa do Endereço 
 iframe{
   border-radius: 20px;
   margin: 10px;
-}
+} */
 
 
-/* Tamanho dos ícones (facebook, instagram, twitter, linkedin) */
-.logos .icone1{
+/* -------Tamanho dos ícones (facebook, instagram, twitter, linkedin) */
+/* .logos .icone1{
   filter:invert();
   height: 34px;
   width: 34px;
@@ -534,10 +442,10 @@ iframe{
   filter:invert();
   height: 32px;
   width: 32px;
-}
+} */
 
-/* Ícones localização, telefone e email */
-.icone5{
+/* -------Ícones localização, telefone e email */
+/* .icone5{
   filter:invert();
   height: 29px;
   width: 29px;
@@ -551,10 +459,10 @@ iframe{
   filter:invert();
   height: 32px;
   width: 32px;
-}
+} */
 
-/* Animação dos ícones Footer*/
-.logos .icone1:hover {
+/* -------Animação dos ícones Footer*/
+/* .logos .icone1:hover {
   transform: translateY(-5px);
   transition: all 0.4s;
 }
@@ -581,12 +489,11 @@ iframe{
 .logos2 .icone7:hover {
   transform: translateY(-5px);
   transition: all 0.4s;
-} 
+}  */
 
-/* Animação do menu */
-.column2 a:hover{
+/* -------Animação do menu */
+/* .column2 a:hover{
   transform: translateX(5px);
   transition: all 0.4s;
-  
-}
+} */
 
