--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -11,10 +11,30 @@ body {
     background-position: 100%;
     height: 100vh;
 }
-  
+ 
+.nomeIdade {
+    display: flex;
+    width: 71%;
+}
+
+#nome_input {
+    margin-top: 8px;
+}
+
+#slc_idade {
+    border: 2px solid #47383F;
+    border-radius: 0.5rem;
+    border-color: #FE5B03;
+    font-family: inherit;
+    font-size: inherit;
+    color: #47383F;
+    background-color: #F1A075;
+    padding: 0.2rem;
+}
+
 .conjunto {
     background-color: rgba(245, 245, 245, 0.371);
-    color: #E1E5EE;
+    color: #47383F;
     font-family: "Convergence", sans-serif;
     font-size: 1.2rem;
     display: flex;
@@ -26,12 +46,10 @@ body {
     left: 9rem;
     top: 150px;
     border-radius: 0.5rem;
- 
 }
   
 h2 {
     margin-bottom: 15px;
-    color: #edf0f8;
 }
   
 .form {
@@ -59,6 +77,14 @@ h2 {
     box-sizing: border-box;
     /* Change border when input focus*/
 }
+
+.form_idade {
+    margin-left: 15px;
+}
+
+#nome_input {
+    width: 95%;
+}
   
 .form__input:hover {
     border-color: #47383F;
@@ -73,13 +99,22 @@ h2 {
     left: 1rem;
     top: 0.8rem;
     padding: 0 0.5rem;
-    color: E1E5EE;
     cursor: text;
     transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
     background-color: #F1A075;
     border-radius: 0.5rem;
 }
-  
+.form__span1 {
+    position: absolute;
+    left: 1rem;
+    top: 1.3rem;
+    padding: 0 0.5rem;
+    cursor: text;
+    transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
+    background-color: #F1A075;
+    border-radius: 0.5rem;
+}
+
 /* 
 1. Quando a input está no modo FOCUS
 reduz o tamanho da label e move para cima
@@ -93,6 +128,12 @@ reduz o tamanho da label e move para cima
     font-size: 0.8rem;
     left: 0.8rem;
 }
+.form__input:focus~.form__span1,
+.form__input:not(:placeholder-shown).form__input:not(:focus)~.form__span {
+    top: 0.1rem;
+    font-size: 0.8rem;
+    left: 0.8rem;
+}
   
 .button {
     font-family: "Convergence", sans-serif;
@@ -103,3 +144,39 @@ reduz o tamanho da label e move para cima
     color: #E1E5EE;
 }
   
+.loading-div {
+    width: 50px;
+    display: none;
+}
+
+.loading-div img{
+    position: relative;
+    right: 14px;
+    width: 70px;
+    bottom: 20px;
+}
+    
+
+
+
+.alerta_erro {
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  .card_erro {
+    display: none;
+    background-color: #fff;
+    color: black;
+    width: 230px;
+    position: fixed;
+    border-radius: 4px;
+    border: #e6005a 3px solid;
+    padding: 10px;
+    margin-right: 10%;
+  }
+  
+  .card_erro #mensagem_erro {
+    font-weight: 500;
+    font-size: 20px;
+  }
