--- a/public/teste.css
+++ b/public/teste.css
@@ -1,5 +1,10 @@
 /*   color variables */
 /*   border radius */
+body {
+  /* height: 900vh; */
+  background-color: black;
+}
+
 *,
 *::before,
 *::after {
@@ -8,78 +13,19 @@
   padding: 0;
 }
 
-.conjunto {
-    background-color: #060b23;
-    color: #e1e5ee;
+
+.conjunto { 
+  background: url(../public/assets/PraQuemTemFe.gif);
+  background-repeat: no-repeat;
+  background-size: cover;
     font-family: "Convergence", sans-serif;
     font-size: 1.2rem;
-    /* height: 100vh; */
+    height: 210vh;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: absolute;
+   
 }
-
-h2 {
-    margin-bottom: 15px;
-}
-
-.form {
-  position: relative;
-  width: 20rem;
-  height: 3rem;
-  margin-bottom: 20px;
-}
-
-.form__input {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: 2px solid #e1e5ee;
-  border-radius: 0.5rem;
-  font-family: inherit;
-  font-size: inherit;
-  color: #e1e5ee;
-  outline: none;
-  padding: 1.25rem;
-  background: none;
-  /* Change border when input focus*/
-}
-.form__input:hover {
-  border-color: #adffff;
-}
-.form__input:focus {
-  border-color: #18ffff;
-}
-.form__span {
-  position: absolute;
-  left: 1rem;
-  top: 0.8rem;
-  padding: 0 0.5rem;
-  color: white;
-  cursor: text;
-  transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
-  background-color: #060b23;
-}
-
-/* 
-1. Quando a input está no modo FOCUS
-reduz o tamanho da label e move para cima
-
-2. mantém a label parado quando o conteudo esta na input
-*/
-.form__input:focus ~ .form__span,
-.form__input:not(:placeholder-shown).form__input:not(:focus) ~ .form__span {
-  top: -0.50rem;
-  font-size: 0.8rem;
-  left: 0.8rem;
-}
-
-.button {
-    font-family: "Convergence", sans-serif;
-    padding: 10px; /* Distancia da borda do botao para o que esta escrito nele */
-    border-radius: 0.5rem; /* Arredonda a borda em 15px */
-    font-weight: 700; /* Torna a grossura da fonte em bold 700 */
-  }
