Desenvolvendo Home Page

--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -21,7 +21,7 @@ body {
     margin-top: 8px;
 }
 
-#slc_idade {
+#selectIdade {
     border: 2px solid #47383F;
     border-radius: 0.5rem;
     border-color: #FE5B03;
