--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,10 +1,9 @@
-/*   color variables */
-/*   border radius */
+
 body {
   /* height: 900vh; */
   background-color: black;
+  overflow-x:hidden;
 }
-
 
 *,
 *::before,
@@ -15,12 +14,11 @@ body {
 }
 
 .logoBanda {
-  filter: invert();
   display: flex;
   position: relative;
-  right: 330px;
-  width: 550px;
-  height: 600px;
+  right: 360px;
+  width: 700px;
+  object-fit: cover;
 }
 
 .espacamento {
@@ -28,10 +26,10 @@ body {
 }
 
 .divFotoBanda {
-  background-image: url(../public/assets/banda/BandaNoMuro.JPG);
+  background-image: url(../assets/banda/BandaNoMuro.JPG);
   background-repeat: no-repeat;
   background-size: cover;
-  font-family: "Convergence", sans-serif;
+  font-family: "Convergence", sans-serif; 
   font-size: 1.2rem;
   height: 716px;
   width: 100%;
@@ -59,7 +57,7 @@ body {
 
 .header a {
   text-decoration: none;
-  color: #e3b062;
+  color: #2228ea;
   padding: 35px;
 }
 
@@ -105,7 +103,6 @@ li {
   display: flex;
   align-items: center;
   justify-content: center;
-
 }
   
 .sobreTexto {
@@ -125,20 +122,106 @@ p {
   width: 60%;
   height: 100vh;
 }
-
+ 
 .sobreFoto {
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100vh;
 }
 
-/* .sobreFoto*/ img { 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+/* ------------------SLIDER------------------ */
+* {
+  box-sizing: border-box
 }
+
+/* Slideshow container */
+.sobreFoto-container {
+  width: 100%;
+  max-height: 100%;
+  /* position: relative; */
+  margin: auto;
+}
+
+/* Hide the images by default */
+.Integrantes {
+  display: none;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+/*.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}*/
+
+
+/* The radios/bullets/indicators */
+ .text {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+} 
+/* 
+.active,
+.radio:hover {
+  background-color: red;
+} */
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 0.7s;
+}
+
+@keyframes fade {
+  from {
+      opacity: .3
+  }
+
+  to {
+      opacity: 1
+  }
+}
+
+
 
 /* ------------------------------------------------------------------------------------ */
 * {
@@ -161,6 +244,16 @@ body {
   align-items: center;
   justify-content: center;
   height: 100vh;
+  flex-direction: column;
+}
+
+.wrapperTitle{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+  position: relative;
+  bottom: 100px;
 }
 
 .items {
@@ -253,4 +346,25 @@ body {
   z-index: 100;
   transform: translateZ(calc(var(--index) * 7));
   margin: 0.45vw;
+}
+
+
+.sobreMim{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sobreMim-texto{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: justify;
+}
+
+.sobreMim-foto {
+  width: 100%;
+  height: 400px;
+  background-image: url(../assets/imgs/ORAPPA.png);
+  background-repeat: no-repeat;
 }
