--- a/public/css/usuario.css
+++ b/public/css/usuario.css
@@ -1,17 +1,71 @@
 @import url('https://fonts.googleapis.com/css2?family=Convergence&display=swap');
+@import url('https://fonts.cdnfonts.com/css/draconian-typewriter');
+/* font-family: 'Draconian Typewriter', sans-serif; */
 
 body {
     margin: 0;
     padding: 0;
 }
 
+/* HEADER */
+.container {
+    display: flex;
+    width: 100%;
+    margin: auto;
+}
+
+.header {
+    background-color: #000000;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    z-index: 10;
+}
+
+.header a {
+    font-family: 'Draconian Typewriter', sans-serif;
+    font-size: medium;
+    text-decoration: none;
+    padding: 35px;
+    color: #ffffff;
+}
+
+li {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header img {
+    display: flex;
+    position: relative;
+    width: 80px;
+}
+
+.agora {
+    font-weight: 800;
+}
+
+.navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+    color: #e3b062;
+}
+
+.espacamento {
+    height: 70px;
+}
+
+/* CONTAINER LOGIN/CADASTRO */
 .alinhaConjunto {
     background-image: url(../assets/imgs/biddragon.jpg);
     background-size: cover;
-    background-position: 100%;
     height: 100vh;
 }
- 
+
 .nomeIdade {
     display: flex;
     width: 71%;
@@ -25,7 +79,7 @@ body {
     border: 2px solid #47383F;
     border-radius: 0.5rem;
     border-color: #FE5B03;
-    font-family: inherit;
+    font-family: 'Draconian Typewriter', sans-serif;
     font-size: inherit;
     color: #47383F;
     background-color: #F1A075;
@@ -35,8 +89,8 @@ body {
 .conjunto {
     background-color: rgba(245, 245, 245, 0.371);
     color: #47383F;
-    font-family: "Convergence", sans-serif;
-    font-size: 1.2rem;
+    font-family: 'Draconian Typewriter', sans-serif;
+    font-size: small;
     display: flex;
     width: 30vw;
     flex-direction: column;
@@ -47,18 +101,18 @@ body {
     top: 150px;
     border-radius: 0.5rem;
 }
-  
+
 h2 {
     margin-bottom: 15px;
 }
-  
+
 .form {
     position: relative;
     width: 20rem;
     height: 3rem;
     margin-bottom: 20px;
 }
-  
+
 .form__input {
     position: absolute;
     top: 0;
@@ -68,7 +122,7 @@ h2 {
     border: 2px solid #47383F;
     border-radius: 0.5rem;
     border-color: #FE5B03;
-    font-family: inherit;
+    font-family: 'Draconian Typewriter', sans-serif;
     font-size: inherit;
     color: #47383F;
     background-color: #F1A075;
@@ -78,22 +132,23 @@ h2 {
     /* Change border when input focus*/
 }
 
+.select_idade {
+    font-size: medium;
+}
+
 .form_idade {
     margin-left: 15px;
 }
 
-#nome_input {
-    width: 95%;
-}
-  
+
 .form__input:hover {
     border-color: #47383F;
 }
-  
+
 .form__input:focus {
     border-color: #FF7022;
 }
-  
+
 .form__span {
     position: absolute;
     left: 1rem;
@@ -104,6 +159,7 @@ h2 {
     background-color: #F1A075;
     border-radius: 0.5rem;
 }
+
 .form__span1 {
     position: absolute;
     left: 1rem;
@@ -113,6 +169,10 @@ h2 {
     transition: top 200ms ease-in, left 200ms ease-in, font-size 200ms ease-in;
     background-color: #F1A075;
     border-radius: 0.5rem;
+}
+
+#confirmarSenha {
+    
 }
 
 /* 
@@ -128,43 +188,45 @@ reduz o tamanho da label e move para cima
     font-size: 0.8rem;
     left: 0.8rem;
 }
+
 .form__input:focus~.form__span1,
 .form__input:not(:placeholder-shown).form__input:not(:focus)~.form__span {
     top: 0.1rem;
     font-size: 0.8rem;
     left: 0.8rem;
 }
-  
+
 .button {
-    font-family: "Convergence", sans-serif;
-    padding: 10px;/* Distancia da borda do botao para o que esta escrito nele */
-    border-radius: 0.5rem;/* Arredonda a borda em 15px */
-    font-weight: 700;/* Torna a grossura da fonte em bold 700 */
-    background-color: #FE5B03;
+    font-family: 'Draconian Typewriter', sans-serif;
+    padding: 10px;
+    /* Distancia da borda do botao para o que esta escrito nele */
+    border-radius: 0.5rem;
+    /* Arredonda a borda em 15px */
+    font-weight: 700;
+    /* Torna a grossura da fonte em bold 700 */
+    background-color: #fe0303;
     color: #E1E5EE;
 }
-  
+
 .loading-div {
     width: 50px;
     display: none;
 }
 
-.loading-div img{
+.loading-div img {
     position: relative;
     right: 14px;
     width: 70px;
     bottom: 20px;
 }
-    
-
 
 
 .alerta_erro {
     display: flex;
     justify-content: flex-end;
-  }
-  
-  .card_erro {
+}
+
+.card_erro {
     display: none;
     background-color: #fff;
     color: black;
@@ -174,9 +236,9 @@ reduz o tamanho da label e move para cima
     border: #e6005a 3px solid;
     padding: 10px;
     margin-right: 10%;
-  }
-  
-  .card_erro #mensagem_erro {
+}
+
+.card_erro #mensagem_erro {
     font-weight: 500;
     font-size: 20px;
-  }
+}
