Coleta de dados do formulário e Exibição do gráfico de donnut

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -391,6 +391,7 @@ li {
 }
 
 .sobreMim-foto {
+  filter: invert();
   width: 50%;
   height: 400px;
   background-image: url(../assets/imgs/ORAPPA.png);
