--- a/public/css/sobre.css
+++ b/public/css/sobre.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.cdnfonts.com/css/draconian-typewriter');
+/* font-family: 'Draconian Typewriter', sans-serif; */
+
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Barlow', 'Segoe UI', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: black
+  font-family: 'Draconian Typewriter', sans-serif;  
+  background-color: #000;
 }
 
 :root {
@@ -20,7 +23,7 @@ body {
 }
 
 .header {
-  background-color: #32b9cd;
+  background-color: #000;
   width: 100%;
   display: flex;
   align-items: center;
@@ -31,7 +34,7 @@ body {
 
 .header a {
   text-decoration: none;
-  color: #2228ea;
+  color: #FFF;
   padding: 35px;
 }
 
@@ -69,8 +72,11 @@ li {
   margin: 0;
 }
 
+.espacamento {
+  height: 60px;
+}
 
-/*LOGIN */
+/* ------------------Login------------------ */
 .login {
   height: var(--tamanho-login);
   background-image: url('../assets/imgs/biddragon.jpg');
@@ -247,17 +253,11 @@ input {
 
 
 
-
-
-
-
-
-
-
-
-/* SIMULADOR */
+/* ------------------SIMULADOR------------------ */
 .simulador {
   color: white;
+  position: relative;
+  top: 100px;
 }
 
 .simulador .container {
@@ -266,12 +266,7 @@ input {
 }
 
 
-
-
-
-
-
-/* ALERTA */
+/* ------------------ALERTA------------------ */
 #alerta {
   position: absolute;
   right: 0;
