--- a/public/css/dash.css
+++ b/public/css/dash.css
@@ -54,7 +54,6 @@ main {
     overflow: hidden;
     background: rgb(73, 57, 113);
     padding-top: 10px;
-    border-radius: 15px 0 0 15px;
     font-family: "Roboto", sans-serif;
 }
 
@@ -156,23 +155,20 @@ main {
 }
 
 /* CONTENT */
-
 .content {
     display: grid;
     grid-template-columns: 75% 25%;
 }
 
 /* LEFT CONTENT */
-
 .left-content {
     background: #388fa4;
     margin: 15px;
     padding: 20px;
-    border-radius: 15px;
+
 }
 
 /* ACTIVITIES */
-
 .activities h1 {
     margin: 0 0 20px;
     font-size: 1.4rem;
@@ -189,71 +185,6 @@ main {
 }
 
 /* WEEKLY SCHEDULE */
-
-.weekly-schedule {
-    display: flex;
-    flex-direction: column;
-}
-
-.weekly-schedule h1 {
-    margin-top: 20px;
-    font-size: 1.3rem;
-    font-weight: 700;
-}
-
-.calendar {
-    margin-top: 10px;
-}
-
-.day-and-activity {
-    display: grid;
-    grid-template-columns: 15% 60% 25%;
-    align-items: center;
-    border-radius: 14px;
-    margin-bottom: 5px;
-    color: #484d53;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 3px;
-}
-
-.activity-one {
-    background-color: rgb(124, 136, 224, 0.5);
-    background-image: linear-gradient(240deg, rgb(124, 136, 224) 0%, #c3f4fc 100%);
-}
-
-.activity-two {
-    background-color: #aee2a4a1;
-    background-image: linear-gradient(240deg, #e5a243ab 0%, #f7f7aa 90%);
-}
-
-.activity-three {
-    background-color: #ecfcc376;
-    background-image: linear-gradient(240deg, #97e7d1 0%, #ecfcc3 100%);
-}
-
-.activity-four {
-    background-color: #e6a7c3b5;
-    background-image: linear-gradient(240deg, #fc8ebe 0%, #fce5c3 100%);
-}
-
-.day {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transform: translateY(-10px);
-}
-
-.day h1 {
-    font-size: 1.6rem;
-    font-weight: 600;
-}
-
-.day p {
-    text-transform: uppercase;
-    font-size: 0.9rem;
-    font-weight: 600;
-    transform: translateY(-3px);
-}
-
 .activity {
     border-left: 3px solid #484d53;
 }
@@ -266,7 +197,6 @@ main {
 .participants img {
     width: 28px;
     height: 28px;
-    border-radius: 50%;
     z-index: calc(2 * var(--i));
     margin-left: -10px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 3px;
@@ -276,7 +206,6 @@ main {
     margin-left: 10px;
     font-size: 1.25rem;
     font-weight: 600;
-    border-radius: 12px;
 }
 
 .btn {
@@ -291,7 +220,6 @@ main {
     background: rgba(255, 255, 255, 0.9);
     box-shadow: 0 6px 30px rgba(0, 0, 0, 0.1);
     border: 1px solid rgba(255, 255, 255, 0.3);
-    border-radius: 25px;
     cursor: pointer;
 }
 
@@ -303,44 +231,23 @@ main {
     animation: gelatine 0.5s 1;
 }
 
-@keyframes gelatine {
-
-    0%,
-    100% {
-        transform: scale(1, 1);
-    }
-
-    25% {
-        transform: scale(0.9, 1.1);
-    }
-
-    50% {
-        transform: scale(1.1, 0.9);
-    }
-
-    75% {
-        transform: scale(0.95, 1.05);
-    }
-}
-
 /* PERSONAL BESTS */
-
 .personal-bests {
     display: block;
     background-color: #0000ed;
-    padding: 20px;
+    padding: 15px;
 }
 
 .personal-bests h1 {
-    font-size: 1.3rem;
+    font-size: 20px;
     font-weight: 700;
 }
 
 .personal-bests-container {
     display: flex;
     flex-direction: row;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 10px;
+    gap: 15px;
+    height: 120px;
     margin-top: 10px;
 }
 
@@ -349,14 +256,12 @@ main {
     gap: 20px;
     width: 100%;
     height: 100%;
-    border-radius: 15px;
 }
 
 .box-one {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    font-size: 0.9rem;
     font-weight: 700;
     padding: 10px;
     width: 300px;
@@ -367,7 +272,6 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    font-size: 0.9rem;
     font-weight: 700;
     padding: 10px;
     width: 300px;
@@ -378,67 +282,42 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    font-size: 0.9rem;
     font-weight: 700;
     padding: 10px;
     width: 300px;
     background-color: #b8e0c099;
 }
 
-/* RIGHT CONTENT */
-
-.right-content {
-    display: grid;
-    grid-template-rows: 5% 20% 45%;
+/* RANKING */
+.divRanking {
+    
     background: #f6f7fb;
     margin: 15px 15px 15px 0;
     padding: 10px 0;
-    border-radius: 15px;
 }
 
-/* USER INFO */
-
-.user-info {
-    display: grid;
-    grid-template-columns: 30% 55% 15%;
-    align-items: center;
-    padding: 0 10px;
-}
-
-.icon-container {
+/* TITULO "RANKING" */
+.divRanking h4{
     display: flex;
-    gap: 15px;
+    justify-content: center;
 }
 
-.user-info h4 {
-    margin-left: 40px;
-}
-
-.user-info img {
-    width: 40px;
-    aspect-ratio: 1/1;
-    border-radius: 50%;
-}
-
-/* ACTIVE CALORIES  */
-
-.active-calories {
+/* COLUNAS RANKING  */
+.titulosColunasRanking {
     display: flex;
-    flex-direction: column;
     align-items: center;
     background-color: rgb(214, 227, 248);
     padding: 0 10px;
     margin: 15px 10px 0;
-    border-radius: 15px;
-    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 3px;
+    box-shadow: rgba(0, 0, 0, 0.161) 0px 1px 3px;
 }
 
-.active-calories h1 {
+.titulosColunasRanking  span{
     margin-top: 10px;
     font-size: 1.2rem;
 }
 
-.active-calories-container {
+.rankingContianer {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -460,7 +339,6 @@ main {
     flex-direction: column;
     position: relative;
     padding: 10px 0;
-    /* width: 200px; */
 }
 
 .box h2 {
@@ -595,71 +473,52 @@ main {
     }
 }
 
-@media (max-width: 1310px) {
-    main {
-        grid-template-columns: 8% 92%;
-        margin: 30px;
-    }
 
-    .content {
-        grid-template-columns: 65% 35%;
-    }
-
-    .day-and-activity {
-        margin-bottom: 10px;
-    }
-
-    .btn {
-        padding: 8px 16px;
-        margin: 10px 0;
-        margin-right: 10px;
-        font-size: 1rem;
-    }
-
-    .personal-bests-container {
-        grid-template-rows: repeat(3, 98px);
-        gap: 15px;
-    }
-
-    .box-one {
-        flex-direction: row;
-        justify-content: space-between;
-        grid-area: 1 / 1 / 2 / 3;
-        padding: 10px;
-        font-size: 0.9rem;
-    }
-
-    .box-one img {
-        max-width: 80px;
-    }
-
-    .box-two {
-        flex-direction: row;
-        justify-content: space-between;
-        grid-area: 2 / 1 / 3 / 3;
-    }
-
-    .box-two img {
-        max-width: 70px;
-        align-self: center;
-    }
-
-    .box-three {
-        flex-direction: row;
-        justify-content: space-between;
-        grid-area: 3 / 1 / 4 / 3;
-    }
-
-    .box-three img {
-        max-width: 60px;
-        align-self: center;
-    }
-
-    .right-content {
-        grid-template-rows: 4% 20% 76%;
-        margin: 15px 15px 15px 0;
-    }
+main {
+    grid-template-columns: 8% 92%;
+    margin: 30px;
 }
+
+.content {
+    grid-template-columns: 65% 35%;
+}
+
+.day-and-activity {
+    margin-bottom: 10px;
+}
+
+.btn {
+    padding: 8px 16px;
+    margin: 10px 0;
+    margin-right: 10px;
+    font-size: 1rem;
+}
+
+.box-one {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-two {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-two img {
+    max-width: 70px;
+    align-self: center;
+}
+
+.box-three {
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.box-three img {
+    max-width: 60px;
+    align-self: center;
+}
+
 
 @media (max-width: 1150px) {
     .content {
@@ -716,9 +575,6 @@ main {
         gap: 0;
     }
 
-    .right-content {
-        grid-template-rows: 4% 19% 36% 41%;
-    }
 
     .personal-bests {
         display: none;
@@ -743,11 +599,7 @@ main {
     }
 }
 
-@media (max-width: 1050px) {
-    .right-content {
-        grid-template-rows: 4% 19% 37% 40%;
-    }
-}
+
 
 @media (max-width: 910px) {
     main {
@@ -819,20 +671,13 @@ main {
         padding: 10px 20px 10px;
     }
 
-    .right-content {
-        grid-area: rightContent;
-        grid-template-rows: 5% 40% 50%;
-        margin: 15px 15px 0 15px;
-        padding: 10px 0 0;
-        gap: 15px;
-    }
 
     .activities,
     .weekly-schedule {
         margin-top: 10px;
     }
 
-    .active-calories-container {
+    .rankingContianer {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -843,10 +688,6 @@ main {
         display: none;
     }
 }
-
-
-
-
 .chart-container {
     width: 20vw;
     height: 40vh;
@@ -857,4 +698,39 @@ main {
     width: 35 vw;
     height: 40vh;
     /* display: flex; */
+}
+/*Estilização do ranking*/
+.tabelaRanking{
+    text-align: center;
+}
+.tabela {
+    border-collapse: collapse;
+    color: #000; /
+  }
+.cabecalho {
+    background-color: #5589ff; 
+    display: flex;
+    font-weight: bold;
+}
+.corpo{
+    background-color: #e7e5e5;
+}
+.cabecalho-item {
+    flex: 1;
+    /* padding: 10px; */
+    border-right: 1px solid #424242;
+    text-align: center;
+}
+.linha {
+    display: flex;
+}
+.placar {
+    margin: 0;
+    flex: 1;
+    padding: 10px;
+    border: 1px solid #424242;
+    text-align: center;
+}
+.linha:hover {
+    background-color: #fca4a4;
 }
